// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelloWorld should render correctly with the dynamic chunk 1`] = `
<div>
  <h1>
    Hello world!
  </h1>
  <button>
    Load dynamic chunk
  </button>
  <div>
    I'm dynamic
  </div>
</div>
`;

exports[`HelloWorld should render correctly without the dynamic chunk 1`] = `
<div>
  <h1>
    Hello world!
  </h1>
  <button>
    Load dynamic chunk
  </button>
</div>
`;
